data/derived/comb/progs/unify/prog0771.ml.out
Characters 93-96:
  | h::t -> (helper t l (h::acc)) in
                            ^^^
Error: This expression has type 'a list -> 'b
       but an expression was expected of type 'a list
